--- a/test.html
+++ b/test.html
@@ -3,9 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <script type="text/javascript" src="main.js"></script>
+  <link href="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.css" rel="stylesheet" />
+
 </head>
 <body>
-
+  <div id="mocha"></div>
+  <script src="https://cdn.rawgit.com/jquery/jquery/2.1.4/dist/jquery.min.js"></script>
+  <script src="https://cdn.rawgit.com/Automattic/expect.js/0.3.1/index.js"></script>
+  <script src="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js"></script>
+  <script src="https://cdn.rawgit.com/chaijs/chai/4.0.0-canary.1/chai.js"></script>
+  <script>
+    var assert = chai.assert;
+  </script>
+  <script>mocha.setup('bdd')</script>
+  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="test.main.js"></script>
+  <script>
+    mocha.checkLeaks();
+    mocha.globals(['jQuery']);
+    mocha.run();
+  </script>
 </body>
 </html>
